# Final-Project-MLOps

./: .dockerignore  .gitignore  Dockerfile  Projecto MLOps.ipynb  pyproject.toml  stream_test_data.py
.github/workflows/: CICD.yml
.ipynb_checkpoints/: Projecto MLOps-checkpoint.ipynb
api/: Dockerfile  api.py  app.py  main.py  monitoring.py  requirements.txt
api/models_local/: metrics.json  shadow_metrics.json
gui/: README.md  app.py
monitoring/: datasource.yml  docker-compose.yml  prometheus.yml
mylib/: data_preprocess.py  logic.py  train.py  train_pipeline.py  train_shadow.py
notebooks/: model_performance_analysis.ipynb
tests/: test_api.py  test_data_preprocess.py  test_logic.py  test_model_artifacts.py
