[project]
name = "mlops-finalProject"
version = "0.1.0"
description = "Continuous Integration using GitHub Actions"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    # Formatting & linting
    "black==24.10.0",
    "pylint==3.3.1",
    # CLI & web
    "click==8.1.7",
    "fastapi==0.110.3",
    "uvicorn==0.29.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    # HTTP & monitoring
    "httpx==0.27.0",
    "prometheus-client==0.20.0",
    # Data science
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "scikit-learn==1.4.2",
    # ML / explainability
    "xgboost==2.0.3",
    "shap==0.44.1",
    # ONNX
    "onnx>=1.16,<2.0",
    "onnxruntime>=1.17,<2.0",
    "onnxscript>=0.3",
    # Optimization / tracking
    "optuna==3.6.1",
    "mlflow==2.11.3",
    # Deep learning (CPU-safe)
    "torch==2.2.2",
    "torchvision==0.17.2",
    # Imaging
    "pillow==10.3.0",
    # Testing
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "setuptools>=80.9.0",
]
